volviendo a manejar cart con localStorage

--- a/client/src/componentes/Carrito/Carrito.module.css
+++ b/client/src/componentes/Carrito/Carrito.module.css
@@ -23,16 +23,19 @@
 }
 
 .total {
-  padding: 5px 10px;
   border-radius: 5px;
+  width: 250px;
+  height: 100px;
   position: absolute;
   top: 45%;
-  right: 13%;
+  right: 3%;
 }
 
 .total p {
   font-size: 30px;
+  width: 100%;
   font-weight: bold;
+  right: -290%;
 }
 
 .pagar {
