--- a/client/src/componentes/HistorialUsuario/HistorialUsuario.module.css
+++ b/client/src/componentes/HistorialUsuario/HistorialUsuario.module.css
@@ -1,5 +1,4 @@
 .divPadre {
-  border: 1px solid black;
   margin: 40px;
   display: flex;
   text-align: center;
@@ -7,9 +6,13 @@
   flex-direction: column;
 }
 
-.div {
-  border: 1px solid black;
-  margin: 25px;
-  text-align: center;
-  width: 50%;
+.divPadre h2 {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .divPadre {
+    margin: 10px;
+  }
 }
