--- a/client/src/componentes/Answers/Answers.module.css
+++ b/client/src/componentes/Answers/Answers.module.css
@@ -1,6 +1,6 @@
 .answerCont {
     background-color: #edeff0;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
