--- a/client/src/componentes/Card/cards.css
+++ b/client/src/componentes/Card/cards.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 .card {
   width: 350px;
   height: 600px;
@@ -6,36 +8,34 @@
 
 .card-title {
   color: black;
-  font-weight: bold;
-}
-
-.card h4,
-h5 {
-  color: black;
-  font-weight: 500;
+  
+  font-size: 1.3rem;
+  font-family: 'Poppins', sans-serif;
 }
 
 .card:hover {
   box-shadow: 5px 10px 20px 1px gray !important;
   transition: all 0.3s linear;
+  transform: translateY(-8px);
 }
 
 .card-body {
   padding: 2rem 0 !important;
   height: 240px;
+  margin-left: 5%;
 }
 
-.card-text {
-  padding: 0.3rem 1rem;
-  font-size: 0.9rem;
-}
+
 
 .overflow {
   overflow: hidden;
   width: 100%;
-  height: 300px;
+  height: 350px;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
 }
 
 .card-img-top {
@@ -46,6 +46,25 @@ h5 {
   transform: scale(1.25);
 }
 
+.cuotas{
+  color: rgb(170, 169, 169);
+  font-size: 0.9rem;
+  font-family: 'Poppins', sans-serif;
+}
+
+.h55 {
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    color: grey;
+
+}
+
+  .h44 {
+    font-size: 1.3rem;
+    font-family: 'Poppins', sans-serif;
+    color: rgb(214, 49, 49);
+  }
+
 @media (max-width: 768px) {
   .card {
     width: 100%;
@@ -54,14 +73,19 @@ h5 {
 
   .card-title {
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
   }
 
   .h55 {
     font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+
   }
 
   .h44 {
-    font-size: 15px;
+    font-size: 1.3rem;
+    font-family: 'Poppins', sans-serif;
   }
 
   .overflow {
@@ -72,5 +96,12 @@ h5 {
 
   .card-body {
     padding: 5px;
+    font-family: 'Poppins', sans-serif;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .card {
+    width: 70%;
   }
 }
