--- a/client/src/componentes/VentasAdmin/ProductCard.module.css
+++ b/client/src/componentes/VentasAdmin/ProductCard.module.css
@@ -21,6 +21,10 @@
   width: 100%;
 }
 
+.product-info-container .info {
+  font-weight: 500;
+}
+
 .product-card p {
   padding: 0;
   margin: 0;
@@ -29,4 +33,5 @@
 
 .bold-text {
   font-weight: bold;
+  font-size: 18px;
 }
