--- a/client/src/componentes/VentasAdmin/VentasAdmin.module.css
+++ b/client/src/componentes/VentasAdmin/VentasAdmin.module.css
@@ -1,7 +1,6 @@
 .registro-parent-container {
   /* border: solid 3px blue; */
   padding-top: 3rem;
-  background-color: #edeff0;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -57,4 +56,11 @@
 
 .bold-text {
   font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .registro {
+    margin-left: 40px;
+    margin-top: 10px;
+  }
 }
