--- a/client/src/componentes/navbar/filtros/filtros.module.css
+++ b/client/src/componentes/navbar/filtros/filtros.module.css
@@ -1,8 +1,14 @@
 .div {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
+}
+
+.filt {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .select {
@@ -12,19 +18,19 @@
   color: #fff;
   border: 1px solid var(--bg);
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 5px 5px;
   margin: 10px;
   font-weight: bold;
   background: var(--bg);
   transition: 0.2s;
 }
 
-/* .select:hover {
+.select:hover {
   color: var(--hover-text);
   transform: translate(-0.25rem, -0.25rem);
   background: var(--hover-bg);
   box-shadow: 0.25rem 0.25rem var(--bg);
-} */
+}
 
 .select:active {
   transform: translate(0);
@@ -43,10 +49,11 @@
   position: relative;
   overflow: hidden;
   transition: all 0.3s;
-  background-color: #ecd448;
+  background-color: #4894ec;
   font-weight: bolder;
   box-shadow: 0 2px 0 2px #000;
   font-size: 15px;
+  margin-left: 30px;
 }
 
 .clear button:before {
@@ -54,7 +61,7 @@
   position: absolute;
   width: 100px;
   height: 120%;
-  background-color: #ff6700;
+  background-color: #111111;
   top: 50%;
   transform: skewX(30deg) translate(-150%, -50%);
   transition: all 0.5s;
@@ -79,7 +86,17 @@
   .div {
     display: flex;
     flex-direction: column;
+    align-items: left;
     width: 100%;
+  }
+
+  .filt {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .select {
+    width: 95%;
   }
 
   .clear button {
@@ -87,10 +104,47 @@
     position: relative;
     overflow: hidden;
     transition: all 0.3s;
-    background-color: #ecd448;
+    background-color: #4894ec;
     font-weight: bolder;
     box-shadow: 0 2px 0 2px #000;
-    top: -420%;
-    right: -115%;
+    top: 200%;
+    right: 5%;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .div {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 100%;
+    height: 100%;
+  }
+
+  .filt {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .select {
+    width: 30%;
+  }
+
+  .clear button {
+    width: 190px;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
+    background-color: #4894ec;
+    font-weight: bolder;
+    box-shadow: 0 2px 0 2px #000;
+    top: 200%;
+    right: 5%;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1500px) {
+  .div {
+    flex-direction: column;
   }
 }
