--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -85,6 +85,7 @@
   height: 90%;
   background-position: center;
   background-size: calc(120% - 80px);
+  background-repeat: no-repeat;
 }
 
 .textCont {
