--- a/client/src/componentes/Carrito/CartProduct.module.css
+++ b/client/src/componentes/Carrito/CartProduct.module.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 .item {
   width: 60%;
   height: 200px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-top: 40px;
   display: flex;
   align-items: center;
   position: relative;
+  background-color: white;
 }
 
 .itemImg {
@@ -23,6 +26,7 @@
   position: absolute;
   bottom: 5%;
   right: 5%;
+  background-color: white;
 }
 
 .btns button {
@@ -30,6 +34,7 @@
   margin-left: 10px;
   font-weight: 500;
   transition: all 0.3s;
+  background-color: white;
 }
 
 .btns button:hover {
@@ -38,6 +43,26 @@
 
 .info p {
   font-weight: 500;
+}
+
+.nombre{
+  font-family: 'Poppins', sans-serif;
+  font-size: 26px;
+}
+
+.stock{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+.talla{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+.cantidad{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
 
 @media (max-width: 768px) {
