--- a/client/src/componentes/Carrito/Carrito.module.css
+++ b/client/src/componentes/Carrito/Carrito.module.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 .cartCont {
-  background-color: #edeff0;
+  background-color: white;
   height: 200vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+ /*  align-items: center; */
+  margin-left: 90px;
 }
 
 .cartCont h1 {
@@ -12,8 +15,14 @@
   font-size: 60px;
 }
 
+.titulo{
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  margin-top: 25px;
+}
+
 .limpiar {
-  margin-top: 15px;
+  margin-top: 45px;
   padding: 5px 10px;
   border-radius: 5px;
   position: absolute;
@@ -49,7 +58,18 @@
 
 .totalFinal {
   display: none;
+  border: 2px solid black;
 }
+
+.recuadroTotal{
+  border: 2px solid black;
+}
+
+.boton{
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 @media (max-width: 768px) {
   .search {
