--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -113,43 +113,43 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.marca{
+.marca {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.nombre{
+.nombre {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 
-.categoria{
+.categoria {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.precio{
+.precio {
   font-size: 35px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.color{
+.color {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.talla{
+.talla {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.stock{
+.stock {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.buttonTalle{
+.buttonTalle {
   width: 40px;
   height: 40px;
   margin-right: 2%;
@@ -196,6 +196,43 @@
 .añadirCart:hover::before {
   top: 0;
   left: 0;
+}
+
+.añadido {
+  padding: 10px;
+  width: 260px;
+  outline: none;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: white;
+  color: white;
+  position: relative;
+  letter-spacing: 1px;
+  font-weight: bold;
+  cursor: pointer;
+  font-family: 'Poppins', sans-serif;
+}
+
+.añadido::before {
+  content: 'QUITAR DEL CARRITO';
+  position: absolute;
+  top: -8%;
+  left: 2%;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.15s ease-in-out;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.añadido:hover::before {
+  top: 0%;
+  left: 0%;
 }
 
 .textCont h3 {
@@ -290,7 +327,7 @@
   top: 45%;
 }
 
-.spinner > div {
+.spinner>div {
   background-color: rgba(0, 77, 255, 0.2);
   height: 100%;
   position: absolute;
