seccion sobre nosotros terminada

--- a/client/src/componentes/About/About.module.css
+++ b/client/src/componentes/About/About.module.css
@@ -24,7 +24,28 @@
    }
    
 
-   .card_image2 {
+   .card_image{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./carlos_islas.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+   .card_image2{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./alejandro.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+
+   .card_imag3{
     height: 100%;
     width: 100%;
     position: absolute;
@@ -40,6 +61,17 @@
     position: absolute;
     transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
     background: url('./joaco.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+
+   .card_image5 {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./cesar.jpg');
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
