--- a/client/src/componentes/Footer/Footer.module.css
+++ b/client/src/componentes/Footer/Footer.module.css
@@ -1,12 +1,12 @@
 .div {
-    background-color: black;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+  background-color: black;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .div h2 {
@@ -15,17 +15,28 @@
     justify-content: center;
 }
 
+.div h4 {
+  color: #4894ec;
+}
+
 .links {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 15px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 15px;
 }
 
 .links img {
-    width: 30px
+  width: 30px;
+  filter: invert(100%);
 }
 
 .links img:hover {
-    margin-top: 10px;
-    transition: all 0.8;
+  transition: all 0.8;
+}
+
+.redes {
+  width: 10%;
+  display: flex;
+  gap: 10px;
 }
