--- a/client/src/componentes/Modal/Modal.module.css
+++ b/client/src/componentes/Modal/Modal.module.css
@@ -11,7 +11,7 @@
 
 .window {
   position: relative;
-  top: 60%;
+  top: calc(100vh - 20%);
   background-color: #fff;
   border-radius: 5px;
   padding: 30px 10px;
