--- a/client/src/componentes/navbar/filtros/filtros.module.css
+++ b/client/src/componentes/navbar/filtros/filtros.module.css
@@ -45,7 +45,7 @@
 
 .clear button {
   width: 160px;
-  height: 38px;
+  height: 3rem;
   position: relative;
   overflow: hidden;
   transition: all 0.3s;
@@ -54,10 +54,11 @@
   box-shadow: 0 2px 0 2px #000;
   font-size: 15px;
   margin-left: 30px;
+  padding-bottom: 3rem;
 }
 
 .clear button:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100px;
   height: 120%;
@@ -109,6 +110,43 @@
     box-shadow: 0 2px 0 2px #000;
     top: 200%;
     right: 5%;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .div {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 100%;
+    height: 100%;
+  }
+
+  .filt {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .select {
+    width: 45%;
+  }
+
+  .clear button {
+    width: 190px;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
+    background-color: #4894ec;
+    font-weight: bolder;
+    box-shadow: 0 2px 0 2px #000;
+    top: 200%;
+    right: 5%;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1500px) {
+  .div {
+    flex-direction: column;
   }
 }
 
