--- a/client/src/componentes/navbar/navbar.module.css
+++ b/client/src/componentes/navbar/navbar.module.css
@@ -310,9 +310,6 @@
     margin-left: 50px;
   }
 
-  .btns {
-  }
-
   .adminn {
     display: flex;
     flex-direction: column;
@@ -381,6 +378,10 @@
 }
 
 @media (min-width: 769px) and (max-width: 1200px) {
+  .div {
+    border-bottom: 0;
+  }
+
   .black {
     width: 100%;
     height: 70%;
