--- a/client/src/componentes/superAdmin/AddAdmin.module.css
+++ b/client/src/componentes/superAdmin/AddAdmin.module.css
@@ -1,6 +1,6 @@
 .add-role-container {
-  margin-top: 5.1rem;
-  border: solid black 1px;
+  margin-top: 7.4rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 28rem;
   display: flex;
   justify-content: center;
