--- a/client/src/componentes/Carrito/CartProduct.module.css
+++ b/client/src/componentes/Carrito/CartProduct.module.css
@@ -1,59 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 .item {
-  width: 60%;
+  width: 75%;
   height: 200px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   margin-top: 40px;
   display: flex;
   align-items: center;
   position: relative;
-  background-color: white;
+  
 }
 
 .itemImg {
   width: 20%;
-  height: 180px;
+  height: 170px;
   margin-right: 20px;
-  background-size: cover;
+  background-size: 80%;
+  background-repeat: no-repeat;
   background-position: center;
   border-radius: 5px;
+  float: left;
 }
 
 .btns {
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
+  margin-left: 55px;
   background-color: white;
+  display: flex;
+  flex-direction: row;
+  float: left;
 }
 
 .btns button {
+  width: 40px;
+  height: 40px;
   border-radius: 5px;
   margin-left: 10px;
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: black;
   font-weight: 500;
   transition: all 0.3s;
   background-color: white;
+  float: left;
 }
 
 .btns button:hover {
   filter: invert(100%);
 }
 
-.info p {
+.span{
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
   font-weight: 500;
+  margin-left: 20px;
+  margin-right: 8px;
+  margin-top: 5px;
+}
+
+.btnX {
+  background-color: white;
+  color: white;
+  border-radius: 5px;
+  /* padding: 3px 10px; */
+  font-weight: bolder;
+  position: absolute;
+  right: 1%;
+  top: 5%;
+}
+
+.btnX button {
+  border-radius: 5px;
+  margin-left: 10px;
+  font-weight: 500;
+  transition: all 0.3s;
+  background-color: white;
+  float: left;
+}
+
+.btnX button:hover {
+  filter: invert(100%);
+}
+
+.info p {
+  width: 250px;
+  height: 50px;
+  margin-left: -20px ;
+  
+  clear: both;
 }
 
 .nombre{
+  width: 250px;
+  height: 50px;
   font-family:  Arial, Helvetica, sans-serif;
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: 500;
   color: black;
+  line-height: -20px;
+}
+
+.talle{
+  width: 250px;
+  height: 50px;
+  margin-left: -20px ;
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: black;
+  line-height: 25px;
 }
 
 .precio{
   font-family:  Arial, Helvetica, sans-serif;
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 35px;
+  color: black;
+  float: left;
+}
+
+.precioTitle{
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-left: 35px;
   color: black;
 }
 
@@ -62,10 +133,35 @@
   font-size: 20px;
 }
 
-.talla{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+.stdiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.preciodiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.stotal{
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 55px;
+  color: black;
+  float: left;
+}
+
+.stTitle{
+  font-family:  Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-left: 55px;
+  color: black;
+}
+
+
 
 .cantidad{
   font-family: Arial, Helvetica, sans-serif;
@@ -94,5 +190,16 @@
     padding: 1px 4px;
     font-size: 13px;
     font-weight: 500;
+  }
+
+  .btnX button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 100px;
+    right: 10px;
   }
 }
