--- a/client/src/componentes/home/home.module.css
+++ b/client/src/componentes/home/home.module.css
@@ -9,8 +9,8 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
     ),
-    url('../../img/stadium.jpg');
-  background-position: bottom;
+    url('../../img/EstadioDeDia.jpeg');
+  background-position: center;
   background-size: cover;
   position: relative;
   display: flex;
