--- a/client/src/componentes/superAdmin/AddAdmin.module.css
+++ b/client/src/componentes/superAdmin/AddAdmin.module.css
@@ -1,11 +1,12 @@
 .add-role-container {
-  margin-top: 7.4rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 28rem;
   display: flex;
   justify-content: center;
   width: 35rem;
   padding-bottom: 1rem;
+  margin-top: 4rem;
+  border-radius: 10px;
 }
 
 .add-role-container p {
