ultimos cambios en los estilos

--- a/client/src/componentes/home/carrusel/carrusel.module.css
+++ b/client/src/componentes/home/carrusel/carrusel.module.css
@@ -1,11 +1,6 @@
 
-/* .img{
-width: 100%;
+.img{
+    min-width: 100%;
+    min-height: 590px;
+    /* opacity: .6; */
 }
-
-.next{
-position: relative;
-top: -300px;
-width: 40%;
-opacity: 1;
-} */
