--- a/client/src/componentes/About/About.module.css
+++ b/client/src/componentes/About/About.module.css
@@ -204,7 +204,7 @@
   }
 
   
-@media (max-width: 768px)  {
+@media (max-width: 900px)  {
     .Div{
         background-color: #edeff0;
         height: 1800px;
@@ -228,7 +228,7 @@
         width: 200px;
         position: relative;
         top: -10px;
-        right: 28%;
+        right: 17%;
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
         border-radius: 1em;
         box-shadow: 0 0 20px 8px #d0d0d0;
@@ -247,20 +247,48 @@
         margin: 8px;
         justify-content: center;
         display: grid;
-        grid-template-columns: 200px 200px ;
+        grid-template-columns: 170px 170px ;
         grid-template-rows: auto;
-        grid-gap: 20px;
+        grid-gap: 0px;
        }
 
        .card {
         height: 150px;
         width: 150px;
         position: relative;
-        right: 10%;
+        right: 17%;
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
         border-radius: 1em;
         box-shadow: 0 0 20px 8px #d0d0d0;
-        margin: 40px;
+        margin: 20px;
+        margin-left: 40px;
+        margin-right: 40px;
+       }
+  }
+
+  @media (max-width: 340px)  {
+    .divPadre {
+        width: 95%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 8px;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 170px;
+        grid-template-rows: auto;
+        grid-gap: 0px;
+       }
+
+       .card {
+        height: 150px;
+        width: 150px;
+        position: relative;
+        right: 17%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 20px;
         margin-left: 40px;
         margin-right: 40px;
        }
