--- a/client/src/componentes/Footer/Footer.module.css
+++ b/client/src/componentes/Footer/Footer.module.css
@@ -1,28 +1,35 @@
 .div {
   background-color: black;
-  height: 100%;
+  height: 223px;
   width: 100%;
   display: flex;
   flex-direction: column;
   position: sticky;
-  top: 0;
+  top: 10px;
   z-index: 1000;
+  
 }
 
-.div h2 {
+/* .div h2 {
     color: rgb(85, 85, 85);
     display: flex;
     justify-content: center;
+} */
+.h2{
+  font-size: 32px;
+  background-color: white;
+  border-radius: 5px;
+  opacity: .8;
 }
 
-.div h4 {
+.div h4 h2{
   color: #4894ec;
 }
 
 .links {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-evenly; 
+  align-items: center; 
   margin-top: 15px;
 }
 
@@ -33,10 +40,58 @@
 
 .links img:hover {
   transition: all 0.8;
+  width: 35px;
 }
 
 .redes {
   width: 10%;
   display: flex;
   gap: 10px;
+}
+
+.img{
+  min-width: 60px;
+  position: relative;
+  left: 110%;
+}
+
+.divLink{
+  width: 200px;
+  text-align: center;
+}
+
+.nosotros{
+  font-size: 32px;
+  background-color: white;
+  border-radius: 5px;
+  opacity: .8;
+}
+.contenedor{
+  /* border: 1px solid blanchedalmond; */
+  position: relative;
+  top: 47px;
+}
+
+.copyrigth{
+  position: relative;
+  top: 118px;
+  color: white;
+}
+
+
+@media (max-width: 550px)  {
+  .div {
+    background-color: black;
+    height: 360px;
+ 
+    
+  }
+  
+  .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    height: 230px;
+    margin-top: -22px;
+  }
 }
