--- a/client/src/componentes/About/About.module.css
+++ b/client/src/componentes/About/About.module.css
@@ -1,18 +1,20 @@
-.Div{
+.Div {
     background-color: #edeff0;
     height: 1400px;
 }
-  
-.imagenAbout{
+
+.imagenAbout {
     border: 1px solid black;
     min-width: 900px;
     min-height: 900px;
 }
- .divPadre{
+
+.divPadre {
     display: flex;
     flex-direction: row;
-    width: 100%;  
+    width: 100%;
 }
+
 .card {
     height: 350px;
     width: 300px;
@@ -21,10 +23,10 @@
     border-radius: 1em;
     box-shadow: 0 0 20px 8px #d0d0d0;
     margin: 8px;
-   }
-   
+}
 
-   .card_image{
+
+.card_image {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -33,8 +35,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
-   .card_image2{
+}
+
+.card_image2 {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -43,9 +46,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
+}
 
-   .card_image3{
+.card_image3 {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -54,8 +57,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
-   .card_image4 {
+}
+
+.card_image4 {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -64,9 +68,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
+}
 
-   .card_image5 {
+.card_image5 {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -75,9 +79,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
-   
-   .card_image6 {
+}
+
+.card_image6 {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -86,8 +90,9 @@
     background-size: cover;
 
     /* background: linear-gradient(to top, #0a3394, #4286f4); */
-   }
-   .card_description {
+}
+
+.card_description {
     /* width: 100%;
     display: flex;
     position: absolute;
@@ -102,23 +107,35 @@
     transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
     padding: 1rem; */
     display: none;
-   }
-   
+}
 
-   .text_title {
+.contacto {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.text_title {
     font-size: 1.4em;
     font-weight: 700;
-   }
-   
-   .text_body {
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text_body {
     font-size: 1em;
     line-height: 150%;
-     }
-   
-   
+}
 
-   
-   .card:hover .card_description {
+
+
+
+.card:hover .card_description {
     transform: translateY(40%);
     width: 100%;
     display: flex;
@@ -133,10 +150,10 @@
     border-radius: 1em 1em 0 0;
     transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
     padding: 1rem;
-   }
-    
-   
-   
+}
+
+
+
 .contentAbout {
     background-color: #edeff0;
     height: 79vh;
@@ -153,13 +170,13 @@
     margin-bottom: 50px;
 }
 
-.divData{
+.divData {
     width: 95%;
     position: relative;
     top: 160px;
 }
 
-.Footer{
+.Footer {
     /* width: 110%; */
     position: relative;
     top: 100px;
@@ -167,11 +184,12 @@
 
 
 
-@media (max-width: 1300px)  {
-    .Div{
+@media (max-width: 1300px) {
+    .Div {
         background-color: #edeff0;
         height: 1940px;
     }
+
     .divPadre {
         width: 95%;
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -184,11 +202,11 @@
         grid-template-columns: 200px 200px 200px;
         grid-template-rows: 250px 250px 250px;
         grid-gap: 90px;
-       
-      
-       }
 
-       .card {
+
+    }
+
+    .card {
         height: 250px;
         width: 250px;
         position: relative;
@@ -198,17 +216,18 @@
         border-radius: 1em;
         box-shadow: 0 0 20px 8px #d0d0d0;
         margin: 40px;
-        
-       }
- 
-  }
 
-  
-@media (max-width: 768px)  {
-    .Div{
+    }
+
+}
+
+
+@media (max-width: 768px) {
+    .Div {
         background-color: #edeff0;
         height: 1800px;
     }
+
     .divPadre {
         width: 95%;
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -217,13 +236,13 @@
         margin: 8px;
         justify-content: center;
         display: grid;
-        grid-template-columns: 200px 200px ;
+        grid-template-columns: 200px 200px;
         grid-template-rows: 200px 200px;
         grid-gap: 60px;
         border: 1px solid black;
-       }
+    }
 
-       .card {
+    .card {
         height: 200px;
         width: 200px;
         position: relative;
@@ -235,10 +254,10 @@
         margin: 30px;
         /* margin-left: 40px;
         margin-right: 40px; */
-       }
-  }
+    }
+}
 
-  @media (max-width: 530px)  {
+@media (max-width: 530px) {
     .divPadre {
         width: 95%;
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -247,12 +266,12 @@
         margin: 8px;
         justify-content: center;
         display: grid;
-        grid-template-columns: 200px 200px ;
+        grid-template-columns: 200px 200px;
         grid-template-rows: auto;
         grid-gap: 20px;
-       }
+    }
 
-       .card {
+    .card {
         height: 150px;
         width: 150px;
         position: relative;
@@ -263,5 +282,5 @@
         margin: 40px;
         margin-left: 40px;
         margin-right: 40px;
-       }
-  }
+    }
+}
