--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -83,36 +83,21 @@
 .img111 {
   width: 40%;
   height: 90%;
+  /* background-position: center;
+  background-size: calc(120% - 80px); */
   background-position: center;
-  background-size: 90%;
+  background-size: calc(120% - 80px);
   background-repeat: no-repeat;
 }
-
-.img112 {
-  width: 40%;
-  height: 90%;
-  background-position: center;
-  background-size: 90%;
-  background-repeat: no-repeat;
-}
-
-.img113 {
-  width: 40%;
-  height: 90%;
-  background-position: center;
-  background-size: 90%;
-  background-repeat: no-repeat;
-}
-
 
 .textCont {
   background-color: #edeff0;
   height: 100%;
-  width: 35%;
+  width: 45%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   flex-direction: column;
+  align-items: center;
 }
 
 .textCont h2 {
@@ -121,7 +106,7 @@
 
 .productDesc {
   margin-bottom: 150px;
-  margin-left: 50px;
+  margin-left: -10%;
 }
 
 .productDesc h2 {
@@ -138,7 +123,7 @@
 .nombre {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  
+  font-weight: bold;
 }
 
 .categoria {
@@ -149,7 +134,6 @@
 .precio {
   font-size: 35px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
 }
 
 .color {
@@ -251,6 +235,10 @@
 .añadido:hover::before {
   top: 0%;
   left: 0%;
+}
+
+.textCont h3 {
+  font-weight: bold;
 }
 
 .productDesc {
@@ -392,35 +380,42 @@
   }
 }
 
-@media (max-width: 768px) and (min-width: 909px){
+@media (max-width: 768px) {
   .detailCont {
     flex-direction: column;
     align-items: center;
   }
 
-  
-
   .imgCont {
-    height:500%;
-    
+    width: 50%;
+    height: 400px;
+  }
+
+  .img11 {
+    height: 600px;
   }
 
   .img111 {
-    width: 80%;
-  }
-
-  .img112 {
-    width: 80%;
-  }
-
-  .img113 {
-    width: 80%;
+    width: 300px;
+    height: 600px;
+    background-size: 250px;
   }
 
   .textCont {
     width: 100%;
-    height: 3000px;
+    height: 50%;
     position: relative;
+    justify-content: flex-start;
+    border: 2px solid red;
+  }
+
+  .btns {
+    position: absolute;
+    top: 90%;
+  }
+
+  .btns img {
+    width: 50px;
   }
 
   .productDesc {
@@ -430,12 +425,9 @@
   }
 
   .botones {
-    width: 45%;
+    width: 90%;
+    position: absolute;
     bottom: 10%;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 140px;
-
   }
 
   .spinner {
@@ -445,124 +437,39 @@
   }
 }
 
-@media (min-width: 1250px) and (max-width: 1440px){
+@media (min-width: 769px) and (max-width: 1380px) {
   .textCont {
     background-color: #edeff0;
     height: 100%;
-    width: 35%;
+    width: 45%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: -100px;
   }
 
-  .botones {
-    width: 65%;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin-top: -50px;
-    margin-left: -130px;
+  .textCont h2 {
+    font-size: 30px;
+    margin-left: 5%;
   }
 
-  .añadirCart {
-    width: 230px;
-  }
-  
-  .productDesc {
-    margin-top: 150px;
-    width: 500px;
-    height: 300px;
-    margin-left: 15px;
+  .textCont h3 {
+    font-size: 20px;
+    margin-left: 5%;
   }
 
-  .marca {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .nombre {
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-  }
-  
-  .categoria {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-}
-
-@media (min-width: 910px) and (max-width: 1024px) {
-  .textCont {
-    background-color: #edeff0;
-    height: 100%;
-    width: 35%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -50px;
+  .textCont h5 {
+    font-size: 18px;
+    margin-left: 5%;
   }
 
   .botones {
     width: 100%;
     justify-content: space-around;
-    align-items: flex-start;
-    margin-top: -150px;
-  }
-
-  .añadirCart {
-    width: 230px;
-  }
-  
-  .productDesc {
-    margin-top: 150px;
-    width: 500px;
-    height: 300px;
-    margin-left: 150px;
-  }
-
-  .marca {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .nombre {
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-  }
-  
-  .categoria {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .precio {
-    font-size: 35px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-  }
-  
-  .color {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .talla {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .stock {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
   }
 }
 
-/* @media (min-width: 769px) and (max-width: 990px) {
+@media (min-width: 769px) and (max-width: 990px) {
   .detailCont {
     flex-direction: column;
     align-items: center;
@@ -626,4 +533,3 @@
     left: 35%;
   }
 }
- */
