--- a/client/src/componentes/Answers/Answers.module.css
+++ b/client/src/componentes/Answers/Answers.module.css
@@ -5,3 +5,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.divFooter{
+    border: 1px solid black;
+    position: absolute;
+    top: 920px;
+    width: 100%;
+}
